examples/valid/program57.c
int main(void) {
    float f;
    f = 3.14159;
    return 0;
}

