examples/invalid/program72.c
int main(void) {
    float 9count;
    9count = 0.5;
    return 0;
}


